--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
+          build_dir: dist
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-snake.svg
